@@ -18,11 +18,9 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import org.sonatype.goodies.testsupport.TestSupport;
-
 import org.sonatype.nexus.cleanup.storage.CleanupPolicyStorage;
 
 import org.junit.Before;
@@ -34,389 +32,186 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.Mockito.when;
 
 /**
- * Virtual thread test for {@link UniqueCleanupPolicyNameValidator} to verify thread-safety,
+ * Virtual thread test for {@link UniqueCleanupPolicyNameValidator} that verifies thread-safety,
  * performance, and correctness under Java 21's virtual thread execution model.
- * 
+ * <p>
  * This test focuses on validating that database interactions through {@link CleanupPolicyStorage}
  * remain safe under high concurrency with virtual threads, particularly ensuring that no thread
  * pinning occurs during cleanup policy name validation operations.
- *
- * Without this test, potential database blocking or thread pinning issues would not be detected
- * when running with virtual threads in production. The test verifies that the validator can handle
- * thousands of concurrent validation requests efficiently using Java 21's virtual threads.
- *
- * @since 3.60
  */
 public class UniqueCleanupPolicyNameValidatorVirtualThreadTest
-    extends UniqueCleanupPolicyNameValidatorTest
+    extends TestSupport
 {
-  /**
-   * Number of concurrent virtual threads to create for testing.
-   * This high number helps verify scalability with virtual threads.
-   */
-  private static final int CONCURRENT_THREADS = 1000;
-  
-  /**
-   * Timeout for waiting for all threads to complete.
-   */
-  private static final int TIMEOUT_SECONDS = 10;
-  
-  /**
-   * Test policy name used for validation.
-   */
+  private UniqueCleanupPolicyNameValidator underTest;
+
   private static final String TEST_NAME = "test";
-  
-  /**
-   * Prefix for generating multiple unique test policy names.
-   */
   private static final String TEST_NAME_PREFIX = "test-";
+  private static final int CONCURRENT_THREADS = 1000;
+  private static final int TIMEOUT_SECONDS = 10;
 
   @Mock
   private CleanupPolicyStorage cleanupPolicyStorage;
 
-  private UniqueCleanupPolicyNameValidator underTest;
-
   @Before
-  @Override
   public void setUp() {
     underTest = new UniqueCleanupPolicyNameValidator(cleanupPolicyStorage);
   }
 
   /**
-   * Tests that the validator correctly handles high concurrency with virtual threads
-   * when validating policy names that don't exist (valid case).
-   */
-  /**
-   * Tests that the validator correctly handles high concurrency with virtual threads
-   * when validating policy names that don't exist (valid case).
-   * 
-   * This test creates 1000 virtual threads that all validate the same policy name
-   * concurrently, verifying that:
-   * 1. All validations complete successfully
-   * 2. No thread pinning occurs during database operations
-   * 3. All validations return the expected result (valid)
+   * Tests that the validator correctly handles concurrent validation requests for a name
+   * that doesn't exist in storage (should return true for all threads).
    */
   @Test
-  public void testConcurrentValidationWithVirtualThreads_ValidNames() throws Exception {
-    // Configure mock to return false for exists() calls (names don't exist)
+  public void concurrentValidationOfNonExistentName() throws Exception {
     when(cleanupPolicyStorage.exists(TEST_NAME)).thenReturn(false);
     
     // Create a virtual thread executor
     try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
       CountDownLatch latch = new CountDownLatch(CONCURRENT_THREADS);
       AtomicInteger validResults = new AtomicInteger(0);
-      AtomicBoolean anyThreadPinning = new AtomicBoolean(false);
       
-      // Submit tasks to validate the same name concurrently
+      // Submit concurrent validation tasks
       for (int i = 0; i < CONCURRENT_THREADS; i++) {
         executor.submit(() -> {
           try {
-            // Check if thread is pinned during validation
-            Thread currentThread = Thread.currentThread();
-            boolean isPinned = detectThreadPinning(() -> {
-              boolean result = underTest.isValid(TEST_NAME, null);
-              if (result) {
-                validResults.incrementAndGet();
-              }
-              return result;
-            });
-            
-            if (isPinned) {
-              anyThreadPinning.set(true);
-              System.err.println("Thread pinning detected in " + currentThread.getName());
+            if (underTest.isValid(TEST_NAME, null)) {
+              validResults.incrementAndGet();
             }
-          } 
-          finally {
+          } finally {
             latch.countDown();
           }
         });
       }
       
-      // Wait for all threads to complete
-      boolean completed = latch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
-      assertThat("All validation tasks should complete within timeout", completed, is(true));
-      assertThat("No thread pinning should occur during validation", anyThreadPinning.get(), is(false));
-      assertThat("All validations should return valid", validResults.get(), is(CONCURRENT_THREADS));
+      // Wait for all tasks to complete
+      assertThat("All validation tasks should complete within timeout",
+          latch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS), is(true));
+      
+      // All validations should return true
+      assertThat("All validations should return true for non-existent name",
+          validResults.get(), is(CONCURRENT_THREADS));
     }
   }
 
   /**
-   * Tests that the validator correctly handles high concurrency with virtual threads
-   * when validating policy names that already exist (invalid case).
-   */
-  /**
-   * Tests that the validator correctly handles high concurrency with virtual threads
-   * when validating policy names that already exist (invalid case).
-   * 
-   * This test creates 1000 virtual threads that all validate the same policy name
-   * concurrently, verifying that:
-   * 1. All validations complete successfully
-   * 2. No thread pinning occurs during database operations
-   * 3. All validations return the expected result (invalid)
+   * Tests that the validator correctly handles concurrent validation requests for a name
+   * that exists in storage (should return false for all threads).
    */
   @Test
-  public void testConcurrentValidationWithVirtualThreads_InvalidNames() throws Exception {
-    // Configure mock to return true for exists() calls (names already exist)
+  public void concurrentValidationOfExistingName() throws Exception {
     when(cleanupPolicyStorage.exists(TEST_NAME)).thenReturn(true);
     
     // Create a virtual thread executor
     try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
       CountDownLatch latch = new CountDownLatch(CONCURRENT_THREADS);
       AtomicInteger invalidResults = new AtomicInteger(0);
-      AtomicBoolean anyThreadPinning = new AtomicBoolean(false);
       
-      // Submit tasks to validate the same name concurrently
+      // Submit concurrent validation tasks
       for (int i = 0; i < CONCURRENT_THREADS; i++) {
         executor.submit(() -> {
           try {
-            // Check if thread is pinned during validation
-            Thread currentThread = Thread.currentThread();
-            boolean isPinned = detectThreadPinning(() -> {
-              boolean result = underTest.isValid(TEST_NAME, null);
-              if (!result) {
-                invalidResults.incrementAndGet();
-              }
-              return result;
-            });
-            
-            if (isPinned) {
-              anyThreadPinning.set(true);
-              System.err.println("Thread pinning detected in " + currentThread.getName());
+            if (!underTest.isValid(TEST_NAME, null)) {
+              invalidResults.incrementAndGet();
             }
-          } 
-          finally {
+          } finally {
             latch.countDown();
           }
         });
       }
       
-      // Wait for all threads to complete
-      boolean completed = latch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
-      assertThat("All validation tasks should complete within timeout", completed, is(true));
-      assertThat("No thread pinning should occur during validation", anyThreadPinning.get(), is(false));
-      assertThat("All validations should return invalid", invalidResults.get(), is(CONCURRENT_THREADS));
+      // Wait for all tasks to complete
+      assertThat("All validation tasks should complete within timeout",
+          latch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS), is(true));
+      
+      // All validations should return false
+      assertThat("All validations should return false for existing name",
+          invalidResults.get(), is(CONCURRENT_THREADS));
     }
   }
 
   /**
-   * Tests that the validator correctly handles high concurrency with virtual threads
-   * when validating multiple different policy names.
-   */
-  /**
-   * Tests that the validator correctly handles high concurrency with virtual threads
-   * when validating multiple different policy names.
-   * 
-   * This test creates 1000 virtual threads that each validate a different policy name
-   * concurrently, verifying that:
-   * 1. All validations complete successfully
-   * 2. No thread pinning occurs during database operations
-   * 3. All validations return the expected result (valid)
-   * 4. The validator can handle many different policy names concurrently
+   * Tests that the validator correctly handles concurrent validation requests for multiple
+   * different policy names, ensuring consistent results across all threads.
    */
   @Test
-  public void testConcurrentValidationWithVirtualThreads_MultipleNames() throws Exception {
-    // Configure mock to return false for exists() calls with different names
+  public void concurrentValidationOfMultipleNames() throws Exception {
+    // Configure mock to return true for even-indexed names and false for odd-indexed names
     for (int i = 0; i < CONCURRENT_THREADS; i++) {
       String name = TEST_NAME_PREFIX + i;
-      when(cleanupPolicyStorage.exists(name)).thenReturn(false);
+      when(cleanupPolicyStorage.exists(name)).thenReturn(i % 2 != 0);
     }
     
     // Create a virtual thread executor
     try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
       CountDownLatch latch = new CountDownLatch(CONCURRENT_THREADS);
-      AtomicInteger validResults = new AtomicInteger(0);
-      AtomicBoolean anyThreadPinning = new AtomicBoolean(false);
-      List<String> failedNames = new ArrayList<>();
-      
-      // Submit tasks to validate different names concurrently
+      List<Boolean> results = new ArrayList<>(CONCURRENT_THREADS);
       for (int i = 0; i < CONCURRENT_THREADS; i++) {
-        final String name = TEST_NAME_PREFIX + i;
+        results.add(null); // Initialize with nulls
+      }
+      
+      // Submit concurrent validation tasks with different names
+      for (int i = 0; i < CONCURRENT_THREADS; i++) {
+        final int index = i;
+        final String name = TEST_NAME_PREFIX + index;
+        
         executor.submit(() -> {
           try {
-            // Check if thread is pinned during validation
-            Thread currentThread = Thread.currentThread();
-            boolean isPinned = detectThreadPinning(() -> {
-              boolean result = underTest.isValid(name, null);
-              if (result) {
-                validResults.incrementAndGet();
-              } else {
-                synchronized (failedNames) {
-                  failedNames.add(name);
-                }
-              }
-              return result;
-            });
-            
-            if (isPinned) {
-              anyThreadPinning.set(true);
-              System.err.println("Thread pinning detected in " + currentThread.getName());
+            boolean result = underTest.isValid(name, null);
+            synchronized (results) {
+              results.set(index, result);
             }
-          } 
-          finally {
+          } finally {
             latch.countDown();
           }
         });
       }
       
-      // Wait for all threads to complete
-      boolean completed = latch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
-      assertThat("All validation tasks should complete within timeout", completed, is(true));
-      assertThat("No thread pinning should occur during validation", anyThreadPinning.get(), is(false));
-      assertThat("All validations should return valid", validResults.get(), is(CONCURRENT_THREADS));
-      assertThat("No names should fail validation", failedNames.isEmpty(), is(true));
+      // Wait for all tasks to complete
+      assertThat("All validation tasks should complete within timeout",
+          latch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS), is(true));
+      
+      // Verify results - even indices should be valid (true), odd indices should be invalid (false)
+      for (int i = 0; i < CONCURRENT_THREADS; i++) {
+        boolean expected = i % 2 == 0; // Even indices should be valid
+        assertThat("Validation result for " + TEST_NAME_PREFIX + i + " should be " + expected,
+            results.get(i), is(expected));
+      }
     }
   }
 
   /**
-   * Helper method to detect if a thread is pinned during the execution of a task.
-   * 
-   * This method uses a combination of techniques to detect thread pinning:
-   * 1. Checks if the thread is virtual (pinning only applies to virtual threads)
-   * 2. Uses a separate monitoring thread to check if the virtual thread appears to be blocked
-   * 3. Monitors execution time for anomalies that might indicate pinning
-   * 
-   * In production environments, use JVM flags like -Djdk.tracePinnedThreads=full or JFR events.
-   * 
-   * @param task The task to execute and check for pinning
-   * @return true if pinning was detected, false otherwise
+   * Tests that the validator can handle a high number of concurrent validation requests
+   * without thread pinning or performance degradation.
    */
-  private boolean detectThreadPinning(Runnable task) {
-    Thread currentThread = Thread.currentThread();
+  @Test
+  public void highConcurrencyValidation() throws Exception {
+    final int HIGH_CONCURRENCY = 5000; // Test with 5000 concurrent threads
+    when(cleanupPolicyStorage.exists(TEST_NAME)).thenReturn(false);
     
-    // Pinning only applies to virtual threads
-    if (!currentThread.isVirtual()) {
-      task.run();
-      return false;
-    }
-    
-    // For virtual threads, we need to monitor for signs of pinning
-    AtomicBoolean taskCompleted = new AtomicBoolean(false);
-    AtomicBoolean pinningDetected = new AtomicBoolean(false);
-    
-    // Create a monitoring thread to detect potential pinning
-    Thread monitorThread = Thread.ofPlatform().daemon().start(() -> {
-      try {
-        // Wait a short time to allow normal execution
-        Thread.sleep(50);
-        
-        // If the task hasn't completed yet, it might be pinned
-        if (!taskCompleted.get()) {
-          // In a real implementation, we would check the thread state and stack trace
-          // to determine if it's pinned. For this test, we're using a simplified approach.
-          
-          // Check if the thread is blocked in a synchronized block
-          Thread.State state = currentThread.getState();
-          if (state == Thread.State.BLOCKED || state == Thread.State.WAITING || 
-              state == Thread.State.TIMED_WAITING) {
-            // This could indicate pinning, especially if we're in a synchronized block
-            // In a real implementation, we would check the stack trace for synchronized blocks
-            pinningDetected.set(true);
+    // Create a virtual thread executor
+    try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+      CountDownLatch latch = new CountDownLatch(HIGH_CONCURRENCY);
+      AtomicInteger completedTasks = new AtomicInteger(0);
+      
+      // Submit a high number of concurrent validation tasks
+      for (int i = 0; i < HIGH_CONCURRENCY; i++) {
+        executor.submit(() -> {
+          try {
+            underTest.isValid(TEST_NAME, null);
+            completedTasks.incrementAndGet();
+          } finally {
+            latch.countDown();
           }
-        }
-      }
-      catch (InterruptedException e) {
-        // Monitor thread was interrupted, which is expected when the task completes
-      }
-    });
-    
-    try {
-      // Execute the task and measure execution time
-      long startTime = System.nanoTime();
-      task.run();
-      long endTime = System.nanoTime();
-      
-      // Mark the task as completed to stop the monitoring thread
-      taskCompleted.set(true);
-      monitorThread.interrupt();
-      
-      // Check execution time - extremely long execution might indicate pinning
-      // This is a simplified heuristic and would need tuning in real environments
-      long executionTimeMs = TimeUnit.NANOSECONDS.toMillis(endTime - startTime);
-      if (executionTimeMs > 500) { // Arbitrary threshold for this test
-        pinningDetected.set(true);
+        });
       }
       
-      return pinningDetected.get();
+      // Wait for all tasks to complete with a longer timeout
+      assertThat("All high-concurrency validation tasks should complete within timeout",
+          latch.await(TIMEOUT_SECONDS * 2, TimeUnit.SECONDS), is(true));
+      
+      // All tasks should complete successfully
+      assertThat("All validation tasks should complete successfully",
+          completedTasks.get(), is(HIGH_CONCURRENCY));
     }
-    catch (Exception e) {
-      // Mark the task as completed to stop the monitoring thread
-      taskCompleted.set(true);
-      monitorThread.interrupt();
-      throw e;
-    }
-  }
-  
-  /**
-   * Helper method that returns a result while checking for thread pinning.
-   * 
-   * @param supplier The supplier function to execute and check for pinning
-   * @return The result of the supplier function
-   */
-  private <T> T detectThreadPinning(Supplier<T> supplier) {
-    Thread currentThread = Thread.currentThread();
-    
-    // Pinning only applies to virtual threads
-    if (!currentThread.isVirtual()) {
-      return supplier.get();
-    }
-    
-    // For virtual threads, we need to monitor for signs of pinning
-    AtomicBoolean taskCompleted = new AtomicBoolean(false);
-    AtomicBoolean pinningDetected = new AtomicBoolean(false);
-    
-    // Create a monitoring thread to detect potential pinning
-    Thread monitorThread = Thread.ofPlatform().daemon().start(() -> {
-      try {
-        // Wait a short time to allow normal execution
-        Thread.sleep(50);
-        
-        // If the task hasn't completed yet, it might be pinned
-        if (!taskCompleted.get()) {
-          // Check if the thread is blocked in a synchronized block
-          Thread.State state = currentThread.getState();
-          if (state == Thread.State.BLOCKED || state == Thread.State.WAITING || 
-              state == Thread.State.TIMED_WAITING) {
-            // This could indicate pinning, especially if we're in a synchronized block
-            pinningDetected.set(true);
-          }
-        }
-      }
-      catch (InterruptedException e) {
-        // Monitor thread was interrupted, which is expected when the task completes
-      }
-    });
-    
-    try {
-      // Execute the supplier and measure execution time
-      long startTime = System.nanoTime();
-      T result = supplier.get();
-      long endTime = System.nanoTime();
-      
-      // Mark the task as completed to stop the monitoring thread
-      taskCompleted.set(true);
-      monitorThread.interrupt();
-      
-      // Check execution time - extremely long execution might indicate pinning
-      long executionTimeMs = TimeUnit.NANOSECONDS.toMillis(endTime - startTime);
-      if (executionTimeMs > 500) { // Arbitrary threshold for this test
-        pinningDetected.set(true);
-      }
-      
-      return result;
-    }
-    catch (Exception e) {
-      // Mark the task as completed to stop the monitoring thread
-      taskCompleted.set(true);
-      monitorThread.interrupt();
-      throw e;
-    }
-  }
-  
-  /**
-   * Simple functional interface for operations that return a result.
-   */
-  @FunctionalInterface
-  private interface Supplier<T> {
-    T get();
   }
 }
