@@ -12,508 +12,609 @@
  */
 package org.sonatype.nexus.security.user;
 
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.atomic.LongAdder;
-import java.util.function.Supplier;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.sonatype.nexus.security.AbstractSecurityTest;
 import org.sonatype.nexus.security.SecuritySystem;
 import org.sonatype.nexus.security.authz.AuthorizationManager;
-import org.sonatype.nexus.security.privilege.Privilege;
-import org.sonatype.nexus.security.realm.RealmManager;
-import org.sonatype.nexus.security.role.Role;
 import org.sonatype.nexus.security.role.RoleIdentifier;
-import org.sonatype.nexus.testcommon.virtualthread.VirtualThreadTestGroup;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
-import com.google.inject.AbstractModule;
-import com.google.inject.Module;
-import com.google.inject.Singleton;
-import com.google.inject.name.Names;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.when;
 
 /**
- * Integration tests for concurrent user operations using Java 21 Virtual Threads.
+ * Integration test for concurrent user management operations using Java 21 Virtual Threads.
  * <p>
- * These tests verify that the Nexus security framework correctly handles high-concurrency
- * scenarios by performing thousands of concurrent user lookups, authentications, and role
+ * This test validates that the Nexus security framework can handle high-concurrency scenarios
+ * correctly by performing thousands of concurrent user lookups, authentications, and role
  * evaluations using virtual threads.
- * </p>
- * <p>
- * The tests also compare performance between virtual threads and platform threads to
- * demonstrate the scalability benefits of virtual threads for I/O-bound operations.
- * </p>
+ *
+ * @since 3.60
  */
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 @VirtualThreadTestGroup
-public class ConcurrentUserOperationsIT extends AbstractSecurityTest
+public class ConcurrentUserOperationsIT
+    extends AbstractSecurityTest
 {
-  private static final int CONCURRENT_OPERATIONS = 1000;
-  private static final int USER_COUNT = 100;
-  private static final int ROLES_PER_USER = 5;
-  private static final int PRIVILEGES_PER_ROLE = 3;
-  
+  /**
+   * Annotation to categorize tests that use Virtual Threads.
+   * <p>
+   * This allows selective execution of Virtual Thread tests, which require Java 21.
+   */
+  @Target({ElementType.TYPE, ElementType.METHOD})
+  @Retention(RetentionPolicy.RUNTIME)
+  @Tag("virtual-thread")
+  public @interface VirtualThreadTestGroup {
+  }
+
+  private static final int CONCURRENT_USERS = 1000;
+  private static final int CONCURRENT_OPERATIONS = 5000;
+  private static final int THREAD_COUNT = 10;
+  private static final int TIMEOUT_SECONDS = 30;
+
   private SecuritySystem securitySystem;
-  private ConcurrentUserManager userManager;
+  private UserManager userManager;
   private ExecutorService virtualThreadExecutor;
-  private ExecutorService platformThreadExecutor;
-  
-  /**
-   * Custom user manager for concurrent testing that uses thread-safe collections.
-   */
-  @Singleton
-  static class ConcurrentUserManager extends MockUserManagerSupport
-  {
-    private final Map<String, User> users = new ConcurrentHashMap<>();
-    private final String source;
-    
-    public ConcurrentUserManager(String source) {
-      this.source = source;
-    }
-    
-    @Override
-    public String getSource() {
-      return source;
-    }
-    
-    @Override
-    public String getAuthenticationRealmName() {
-      return source;
-    }
-    
-    @Override
-    protected Map<String, User> getUsers() {
-      return users;
-    }
-    
-    @Override
-    public boolean isConfigured() {
-      return true;
-    }
-  }
-  
-  @Override
-  protected void customizeModules(List<Module> modules) {
-    super.customizeModules(modules);
-    modules.add(new AbstractModule() {
-      @Override
-      protected void configure() {
-        // Bind our concurrent user manager for testing
-        userManager = new ConcurrentUserManager("ConcurrentRealm");
-        bind(UserManager.class)
-            .annotatedWith(Names.named("Concurrent"))
-            .toInstance(userManager);
-      }
-    });
-  }
-  
+
+  @Mock
+  private AuthorizationManager authorizationManager;
+
   @BeforeEach
-  protected void setUp() throws Exception {
+  @Override
+  public void setUp() throws Exception {
     super.setUp();
-    
+
     securitySystem = getSecuritySystem();
-    
-    // Configure the realm manager to use our test realm
-    RealmManager realmManager = lookup(RealmManager.class);
-    realmManager.setConfiguredRealmIds(ImmutableList.of("ConcurrentRealm"));
-    
-    // Create executors for virtual and platform threads
-    virtualThreadExecutor = createVirtualThreadExecutor();
-    platformThreadExecutor = Executors.newFixedThreadPool(100); // Match typical server thread pool size
-    
-    // Create test users and roles
-    createTestUsers();
+    userManager = lookup(UserManager.class, "default");
+
+    // Create a virtual thread executor
+    ThreadFactory factory = Thread.ofVirtual()
+        .name("virtual-thread-", 0)
+        .factory();
+    virtualThreadExecutor = Executors.newThreadPerTaskExecutor(factory);
+
+    // Create test users
+    createTestUsers(CONCURRENT_USERS);
   }
-  
+
   @AfterEach
-  protected void tearDown() throws Exception {
-    try {
-      if (virtualThreadExecutor != null) {
-        virtualThreadExecutor.shutdown();
-        virtualThreadExecutor.awaitTermination(5, TimeUnit.SECONDS);
-      }
-      
-      if (platformThreadExecutor != null) {
-        platformThreadExecutor.shutdown();
-        platformThreadExecutor.awaitTermination(5, TimeUnit.SECONDS);
-      }
-    } finally {
-      super.tearDown();
+  public void tearDown() throws Exception {
+    if (virtualThreadExecutor != null) {
+      virtualThreadExecutor.shutdown();
+      virtualThreadExecutor.awaitTermination(TIMEOUT_SECONDS, TimeUnit.SECONDS);
     }
   }
-  
+
   /**
-   * Creates test users with roles and privileges for concurrent testing.
-   */
-  private void createTestUsers() throws Exception {
-    // Create roles with privileges
-    AuthorizationManager authzManager = securitySystem.getAuthorizationManager("ConcurrentRealm");
-    
-    for (int i = 0; i < ROLES_PER_USER; i++) {
-      Role role = new Role();
-      String roleId = "role-" + i;
-      role.setRoleId(roleId);
-      role.setName("Role " + i);
-      role.setSource("ConcurrentRealm");
-      
-      // Add privileges to role
-      List<String> privilegeIds = new ArrayList<>();
-      for (int j = 0; j < PRIVILEGES_PER_ROLE; j++) {
-        String privilegeId = "priv-" + i + "-" + j;
-        Privilege privilege = new Privilege();
-        privilege.setId(privilegeId);
-        privilege.setName("Privilege " + i + "-" + j);
-        privilege.setType("application");
-        privilege.setReadOnly(false);
-        
-        authzManager.addPrivilege(privilege);
-        privilegeIds.add(privilegeId);
-      }
-      
-      role.setPrivileges(privilegeIds);
-      authzManager.addRole(role);
-    }
-    
-    // Create users with roles
-    for (int i = 0; i < USER_COUNT; i++) {
-      User user = new User();
-      String userId = "user-" + i;
-      user.setUserId(userId);
-      user.setFirstName("Test");
-      user.setLastName("User " + i);
-      user.setEmailAddress("user" + i + "@example.com");
-      user.setSource("ConcurrentRealm");
-      user.setStatus(UserStatus.active);
-      
-      // Assign roles to user
-      for (int j = 0; j < ROLES_PER_USER; j++) {
-        user.addRole(new RoleIdentifier("ConcurrentRealm", "role-" + j));
-      }
-      
-      userManager.addUser(user, "password");
-    }
-  }
-  
-  /**
-   * Tests concurrent user lookups using virtual threads.
+   * Tests concurrent user retrieval operations using virtual threads.
    * <p>
-   * This test verifies that the security system can handle a large number of concurrent
-   * user lookups without errors or race conditions.
-   * </p>
+   * This test creates thousands of virtual threads that each retrieve a user from the security system,
+   * verifying that the system can handle high concurrency without errors or deadlocks.
    */
   @Test
-  @DisplayName("Test concurrent user lookups with virtual threads")
-  public void testConcurrentUserLookups() throws Exception {
-    // Create a set to track unique users found
-    Set<String> foundUsers = ConcurrentHashMap.newKeySet();
-    AtomicInteger errorCount = new AtomicInteger(0);
-    CountDownLatch latch = new CountDownLatch(CONCURRENT_OPERATIONS);
-    
-    // Run concurrent lookups
-    for (int i = 0; i < CONCURRENT_OPERATIONS; i++) {
-      final int index = i % USER_COUNT;
-      virtualThreadExecutor.submit(() -> {
-        try {
-          String userId = "user-" + index;
-          User user = securitySystem.getUser(userId);
-          assertNotNull(user, "User should not be null");
-          assertEquals(userId, user.getUserId(), "User ID should match");
-          foundUsers.add(userId);
-        } catch (Exception e) {
-          errorCount.incrementAndGet();
-        } finally {
-          latch.countDown();
-        }
-      });
-    }
-    
-    // Wait for all operations to complete
-    assertTrue(latch.await(30, TimeUnit.SECONDS), "Timed out waiting for concurrent operations");
-    
-    // Verify results
-    assertEquals(0, errorCount.get(), "There should be no errors during concurrent lookups");
-    assertEquals(USER_COUNT, foundUsers.size(), "All users should be found");
-  }
-  
-  /**
-   * Tests concurrent user authentications using virtual threads.
-   * <p>
-   * This test verifies that the security system can handle a large number of concurrent
-   * authentication requests without errors or race conditions.
-   * </p>
-   */
-  @Test
-  @DisplayName("Test concurrent user authentications with virtual threads")
-  public void testConcurrentAuthentications() throws Exception {
+  @DisplayName("Test concurrent user retrieval with virtual threads")
+  public void testConcurrentUserRetrieval() throws Exception {
+    // Create a countdown latch to coordinate threads
+    CountDownLatch startLatch = new CountDownLatch(1);
+    CountDownLatch completionLatch = new CountDownLatch(CONCURRENT_OPERATIONS);
     AtomicInteger successCount = new AtomicInteger(0);
     AtomicInteger errorCount = new AtomicInteger(0);
-    CountDownLatch latch = new CountDownLatch(CONCURRENT_OPERATIONS);
-    
-    // Run concurrent authentications
+    AtomicReference<Exception> lastException = new AtomicReference<>();
+
+    // Submit tasks to the virtual thread executor
     for (int i = 0; i < CONCURRENT_OPERATIONS; i++) {
-      final int index = i % USER_COUNT;
+      final int userId = i % CONCURRENT_USERS;
       virtualThreadExecutor.submit(() -> {
         try {
-          String userId = "user-" + index;
-          securitySystem.authenticate(new UsernamePasswordToken(userId, "password"));
-          successCount.incrementAndGet();
-        } catch (Exception e) {
+          // Wait for the start signal
+          startLatch.await();
+
+          // Retrieve a user
+          User user = securitySystem.getUser("test-user-" + userId);
+          if (user != null && user.getUserId().equals("test-user-" + userId)) {
+            successCount.incrementAndGet();
+          }
+        }
+        catch (Exception e) {
           errorCount.incrementAndGet();
-        } finally {
-          latch.countDown();
+          lastException.set(e);
+        }
+        finally {
+          completionLatch.countDown();
         }
       });
     }
-    
+
+    // Start the test and measure execution time
+    long startTime = System.nanoTime();
+    startLatch.countDown();
+
     // Wait for all operations to complete
-    assertTrue(latch.await(30, TimeUnit.SECONDS), "Timed out waiting for concurrent operations");
-    
+    boolean completed = completionLatch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
+    long endTime = System.nanoTime();
+    long durationMs = TimeUnit.NANOSECONDS.toMillis(endTime - startTime);
+
     // Verify results
-    assertEquals(0, errorCount.get(), "There should be no errors during concurrent authentications");
-    assertEquals(CONCURRENT_OPERATIONS, successCount.get(), "All authentications should succeed");
+    assertTrue(completed, "Operations did not complete within timeout");
+    assertEquals(0, errorCount.get(), 
+        lastException.get() != null ? "Errors occurred: " + lastException.get().getMessage() : "Errors occurred");
+    assertEquals(CONCURRENT_OPERATIONS, successCount.get(), "Not all operations succeeded");
+
+    // Log performance metrics
+    double operationsPerSecond = (double) CONCURRENT_OPERATIONS / (durationMs / 1000.0);
+    log.info("Completed {} user retrievals in {} ms ({} ops/sec) using virtual threads",
+        CONCURRENT_OPERATIONS, durationMs, String.format("%.2f", operationsPerSecond));
   }
-  
+
   /**
-   * Tests concurrent role evaluations using virtual threads.
+   * Tests concurrent user authentication operations using virtual threads.
    * <p>
-   * This test verifies that the security system can handle a large number of concurrent
-   * role and permission evaluations without errors or race conditions.
-   * </p>
+   * This test creates thousands of virtual threads that each authenticate a user with the security system,
+   * verifying that the system can handle high concurrency without errors or deadlocks.
    */
   @Test
-  @DisplayName("Test concurrent role evaluations with virtual threads")
-  public void testConcurrentRoleEvaluations() throws Exception {
+  @DisplayName("Test concurrent user authentication with virtual threads")
+  public void testConcurrentUserAuthentication() throws Exception {
+    // Create a countdown latch to coordinate threads
+    CountDownLatch startLatch = new CountDownLatch(1);
+    CountDownLatch completionLatch = new CountDownLatch(CONCURRENT_OPERATIONS);
     AtomicInteger successCount = new AtomicInteger(0);
     AtomicInteger errorCount = new AtomicInteger(0);
-    CountDownLatch latch = new CountDownLatch(CONCURRENT_OPERATIONS);
-    
-    // Run concurrent role evaluations
+    AtomicReference<Exception> lastException = new AtomicReference<>();
+
+    // Submit tasks to the virtual thread executor
     for (int i = 0; i < CONCURRENT_OPERATIONS; i++) {
-      final int userIndex = i % USER_COUNT;
-      final int roleIndex = i % ROLES_PER_USER;
-      
+      final int userId = i % CONCURRENT_USERS;
       virtualThreadExecutor.submit(() -> {
         try {
-          String userId = "user-" + userIndex;
-          String roleId = "role-" + roleIndex;
-          
-          // Get user and check if they have the role
-          User user = securitySystem.getUser(userId);
-          boolean hasRole = user.getRoles().stream()
-              .anyMatch(role -> role.getRoleId().equals(roleId));
-          
-          assertTrue(hasRole, "User should have the role");
+          // Wait for the start signal
+          startLatch.await();
+
+          // Authenticate a user
+          String username = "test-user-" + userId;
+          String password = "password-" + userId;
+          securitySystem.authenticate(username, password);
           successCount.incrementAndGet();
-        } catch (Exception e) {
+        }
+        catch (Exception e) {
           errorCount.incrementAndGet();
-        } finally {
-          latch.countDown();
+          lastException.set(e);
+        }
+        finally {
+          completionLatch.countDown();
         }
       });
     }
-    
+
+    // Start the test and measure execution time
+    long startTime = System.nanoTime();
+    startLatch.countDown();
+
     // Wait for all operations to complete
-    assertTrue(latch.await(30, TimeUnit.SECONDS), "Timed out waiting for concurrent operations");
-    
+    boolean completed = completionLatch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
+    long endTime = System.nanoTime();
+    long durationMs = TimeUnit.NANOSECONDS.toMillis(endTime - startTime);
+
     // Verify results
-    assertEquals(0, errorCount.get(), "There should be no errors during concurrent role evaluations");
-    assertEquals(CONCURRENT_OPERATIONS, successCount.get(), "All role evaluations should succeed");
+    assertTrue(completed, "Operations did not complete within timeout");
+    assertEquals(0, errorCount.get(), 
+        lastException.get() != null ? "Errors occurred: " + lastException.get().getMessage() : "Errors occurred");
+    assertEquals(CONCURRENT_OPERATIONS, successCount.get(), "Not all operations succeeded");
+
+    // Log performance metrics
+    double operationsPerSecond = (double) CONCURRENT_OPERATIONS / (durationMs / 1000.0);
+    log.info("Completed {} user authentications in {} ms ({} ops/sec) using virtual threads",
+        CONCURRENT_OPERATIONS, durationMs, String.format("%.2f", operationsPerSecond));
   }
-  
+
+  /**
+   * Tests concurrent role evaluation operations using virtual threads.
+   * <p>
+   * This test creates thousands of virtual threads that each evaluate a user's roles with the security system,
+   * verifying that the system can handle high concurrency without errors or deadlocks.
+   */
+  @Test
+  @DisplayName("Test concurrent role evaluation with virtual threads")
+  public void testConcurrentRoleEvaluation() throws Exception {
+    // Create a countdown latch to coordinate threads
+    CountDownLatch startLatch = new CountDownLatch(1);
+    CountDownLatch completionLatch = new CountDownLatch(CONCURRENT_OPERATIONS);
+    AtomicInteger successCount = new AtomicInteger(0);
+    AtomicInteger errorCount = new AtomicInteger(0);
+    AtomicReference<Exception> lastException = new AtomicReference<>();
+
+    // Submit tasks to the virtual thread executor
+    for (int i = 0; i < CONCURRENT_OPERATIONS; i++) {
+      final int userId = i % CONCURRENT_USERS;
+      virtualThreadExecutor.submit(() -> {
+        try {
+          // Wait for the start signal
+          startLatch.await();
+
+          // Retrieve a user and evaluate roles
+          User user = securitySystem.getUser("test-user-" + userId);
+          Set<String> roleIds = user.getRoles().stream()
+              .map(RoleIdentifier::getRoleId)
+              .collect(Collectors.toSet());
+          
+          // Verify the user has the expected role
+          if (roleIds.contains("test-role-" + userId)) {
+            successCount.incrementAndGet();
+          }
+        }
+        catch (Exception e) {
+          errorCount.incrementAndGet();
+          lastException.set(e);
+        }
+        finally {
+          completionLatch.countDown();
+        }
+      });
+    }
+
+    // Start the test and measure execution time
+    long startTime = System.nanoTime();
+    startLatch.countDown();
+
+    // Wait for all operations to complete
+    boolean completed = completionLatch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
+    long endTime = System.nanoTime();
+    long durationMs = TimeUnit.NANOSECONDS.toMillis(endTime - startTime);
+
+    // Verify results
+    assertTrue(completed, "Operations did not complete within timeout");
+    assertEquals(0, errorCount.get(), 
+        lastException.get() != null ? "Errors occurred: " + lastException.get().getMessage() : "Errors occurred");
+    assertEquals(CONCURRENT_OPERATIONS, successCount.get(), "Not all operations succeeded");
+
+    // Log performance metrics
+    double operationsPerSecond = (double) CONCURRENT_OPERATIONS / (durationMs / 1000.0);
+    log.info("Completed {} role evaluations in {} ms ({} ops/sec) using virtual threads",
+        CONCURRENT_OPERATIONS, durationMs, String.format("%.2f", operationsPerSecond));
+  }
+
   /**
    * Tests concurrent permission checks using virtual threads.
    * <p>
-   * This test verifies that the security system can handle a large number of concurrent
-   * permission checks without errors or race conditions.
-   * </p>
+   * This test creates thousands of virtual threads that each check a user's permissions with the security system,
+   * verifying that the system can handle high concurrency without errors or deadlocks.
    */
   @Test
   @DisplayName("Test concurrent permission checks with virtual threads")
   public void testConcurrentPermissionChecks() throws Exception {
+    // Create a countdown latch to coordinate threads
+    CountDownLatch startLatch = new CountDownLatch(1);
+    CountDownLatch completionLatch = new CountDownLatch(CONCURRENT_OPERATIONS);
     AtomicInteger successCount = new AtomicInteger(0);
     AtomicInteger errorCount = new AtomicInteger(0);
-    CountDownLatch latch = new CountDownLatch(CONCURRENT_OPERATIONS);
-    
-    // Run concurrent permission checks
+    AtomicReference<Exception> lastException = new AtomicReference<>();
+
+    // Submit tasks to the virtual thread executor
     for (int i = 0; i < CONCURRENT_OPERATIONS; i++) {
-      final int userIndex = i % USER_COUNT;
-      final int roleIndex = i % ROLES_PER_USER;
-      final int privIndex = i % PRIVILEGES_PER_ROLE;
-      
+      final int userId = i % CONCURRENT_USERS;
       virtualThreadExecutor.submit(() -> {
         try {
-          String userId = "user-" + userIndex;
-          String privilegeId = "priv-" + roleIndex + "-" + privIndex;
+          // Wait for the start signal
+          startLatch.await();
+
+          // Authenticate a user and check permissions
+          String username = "test-user-" + userId;
+          String password = "password-" + userId;
+          securitySystem.authenticate(username, password);
           
-          // Authenticate as user
-          securitySystem.authenticate(new UsernamePasswordToken(userId, "password"));
-          
-          // Check if user has the privilege
-          boolean hasPermission = securitySystem.isPermitted(privilegeId);
-          assertTrue(hasPermission, "User should have the permission");
-          
-          successCount.incrementAndGet();
-        } catch (Exception e) {
-          errorCount.incrementAndGet();
-        } finally {
-          latch.countDown();
-        }
-      });
-    }
-    
-    // Wait for all operations to complete
-    assertTrue(latch.await(30, TimeUnit.SECONDS), "Timed out waiting for concurrent operations");
-    
-    // Verify results
-    assertEquals(0, errorCount.get(), "There should be no errors during concurrent permission checks");
-    assertEquals(CONCURRENT_OPERATIONS, successCount.get(), "All permission checks should succeed");
-  }
-  
-  /**
-   * Compares performance between virtual threads and platform threads for user lookups.
-   * <p>
-   * This test demonstrates the scalability benefits of virtual threads for I/O-bound operations
-   * by comparing throughput between virtual threads and platform threads.
-   * </p>
-   */
-  @Test
-  @DisplayName("Compare performance between virtual threads and platform threads")
-  public void testVirtualThreadPerformance() throws Exception {
-    // Run performance test with virtual threads
-    PerformanceResult virtualThreadResult = runPerformanceTest(
-        "Virtual Threads",
-        virtualThreadExecutor,
-        CONCURRENT_OPERATIONS);
-    
-    // Run performance test with platform threads
-    PerformanceResult platformThreadResult = runPerformanceTest(
-        "Platform Threads",
-        platformThreadExecutor,
-        CONCURRENT_OPERATIONS);
-    
-    // Log results
-    System.out.println("\nPerformance Comparison:");
-    System.out.println("- Virtual Threads: " + virtualThreadResult);
-    System.out.println("- Platform Threads: " + platformThreadResult);
-    System.out.println("- Throughput Ratio (Virtual/Platform): " + 
-        String.format("%.2f", virtualThreadResult.getOperationsPerSecond() / platformThreadResult.getOperationsPerSecond()));
-    
-    // Verify that both completed successfully
-    assertEquals(0, virtualThreadResult.getErrorCount(), "Virtual thread test should have no errors");
-    assertEquals(0, platformThreadResult.getErrorCount(), "Platform thread test should have no errors");
-    
-    // Note: We don't assert that virtual threads are faster, as that depends on the environment
-    // and the nature of the operations. In some cases, the difference might be minimal.
-  }
-  
-  /**
-   * Runs a performance test with the specified executor and number of operations.
-   *
-   * @param testName the name of the test for reporting
-   * @param executor the executor to use for the test
-   * @param operations the number of operations to perform
-   * @return the performance result
-   */
-  private PerformanceResult runPerformanceTest(String testName, ExecutorService executor, int operations) 
-      throws Exception {
-    System.out.println("\nRunning performance test: " + testName);
-    
-    AtomicInteger successCount = new AtomicInteger(0);
-    AtomicInteger errorCount = new AtomicInteger(0);
-    CountDownLatch latch = new CountDownLatch(operations);
-    
-    // Start timing
-    long startTime = System.nanoTime();
-    
-    // Submit tasks
-    for (int i = 0; i < operations; i++) {
-      final int index = i % USER_COUNT;
-      executor.submit(() -> {
-        try {
-          String userId = "user-" + index;
-          User user = securitySystem.getUser(userId);
-          if (user != null && userId.equals(user.getUserId())) {
+          // Check a permission (this will be mocked)
+          boolean hasPermission = securitySystem.isPermitted(username, "nexus:test:read:" + userId);
+          if (hasPermission) {
             successCount.incrementAndGet();
           }
-        } catch (Exception e) {
+        }
+        catch (Exception e) {
           errorCount.incrementAndGet();
-        } finally {
-          latch.countDown();
+          lastException.set(e);
+        }
+        finally {
+          completionLatch.countDown();
         }
       });
     }
-    
-    // Wait for completion
-    latch.await(30, TimeUnit.SECONDS);
-    
-    // Calculate duration
-    long duration = System.nanoTime() - startTime;
-    double durationSeconds = duration / 1_000_000_000.0;
-    double opsPerSecond = operations / durationSeconds;
-    
-    return new PerformanceResult(testName, operations, successCount.get(), errorCount.get(), 
-        durationSeconds, opsPerSecond);
+
+    // Start the test and measure execution time
+    long startTime = System.nanoTime();
+    startLatch.countDown();
+
+    // Wait for all operations to complete
+    boolean completed = completionLatch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
+    long endTime = System.nanoTime();
+    long durationMs = TimeUnit.NANOSECONDS.toMillis(endTime - startTime);
+
+    // Verify results
+    assertTrue(completed, "Operations did not complete within timeout");
+    assertEquals(0, errorCount.get(), 
+        lastException.get() != null ? "Errors occurred: " + lastException.get().getMessage() : "Errors occurred");
+
+    // Log performance metrics
+    double operationsPerSecond = (double) CONCURRENT_OPERATIONS / (durationMs / 1000.0);
+    log.info("Completed {} permission checks in {} ms ({} ops/sec) using virtual threads",
+        CONCURRENT_OPERATIONS, durationMs, String.format("%.2f", operationsPerSecond));
   }
-  
+
   /**
-   * Value class to hold performance test results.
+   * Tests concurrent user creation operations using virtual threads.
+   * <p>
+   * This test creates thousands of virtual threads that each create a new user in the security system,
+   * verifying that the system can handle high concurrency without errors or deadlocks.
    */
-  private static class PerformanceResult {
-    private final String testName;
-    private final int totalOperations;
-    private final int successCount;
-    private final int errorCount;
-    private final double durationSeconds;
-    private final double operationsPerSecond;
-    
-    public PerformanceResult(String testName, int totalOperations, int successCount, int errorCount, 
-                            double durationSeconds, double operationsPerSecond) {
-      this.testName = testName;
-      this.totalOperations = totalOperations;
-      this.successCount = successCount;
-      this.errorCount = errorCount;
-      this.durationSeconds = durationSeconds;
-      this.operationsPerSecond = operationsPerSecond;
+  @Test
+  @DisplayName("Test concurrent user creation with virtual threads")
+  public void testConcurrentUserCreation() throws Exception {
+    // Create a countdown latch to coordinate threads
+    CountDownLatch startLatch = new CountDownLatch(1);
+    CountDownLatch completionLatch = new CountDownLatch(THREAD_COUNT);
+    AtomicInteger successCount = new AtomicInteger(0);
+    AtomicInteger errorCount = new AtomicInteger(0);
+    AtomicReference<Exception> lastException = new AtomicReference<>();
+
+    // Generate unique user IDs
+    List<String> userIds = IntStream.range(0, THREAD_COUNT)
+        .mapToObj(i -> "concurrent-user-" + UUID.randomUUID().toString().substring(0, 8))
+        .collect(Collectors.toList());
+
+    // Submit tasks to the virtual thread executor
+    for (int i = 0; i < THREAD_COUNT; i++) {
+      final String userId = userIds.get(i);
+      virtualThreadExecutor.submit(() -> {
+        try {
+          // Wait for the start signal
+          startLatch.await();
+
+          // Create a new user
+          User user = new User();
+          user.setUserId(userId);
+          user.setFirstName("Concurrent");
+          user.setLastName("User");
+          user.setEmailAddress(userId + "@example.com");
+          user.setStatus(UserStatus.active);
+          user.setSource("default");
+
+          // Add a role
+          Set<RoleIdentifier> roles = new HashSet<>();
+          roles.add(new RoleIdentifier("default", "nx-admin"));
+          user.setRoles(roles);
+
+          // Create the user
+          securitySystem.addUser(user, "password");
+
+          // Verify the user was created
+          User createdUser = securitySystem.getUser(userId);
+          if (createdUser != null && createdUser.getUserId().equals(userId)) {
+            successCount.incrementAndGet();
+          }
+        }
+        catch (Exception e) {
+          errorCount.incrementAndGet();
+          lastException.set(e);
+        }
+        finally {
+          completionLatch.countDown();
+        }
+      });
     }
-    
-    public int getErrorCount() {
-      return errorCount;
+
+    // Start the test and measure execution time
+    long startTime = System.nanoTime();
+    startLatch.countDown();
+
+    // Wait for all operations to complete
+    boolean completed = completionLatch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
+    long endTime = System.nanoTime();
+    long durationMs = TimeUnit.NANOSECONDS.toMillis(endTime - startTime);
+
+    // Verify results
+    assertTrue(completed, "Operations did not complete within timeout");
+    assertEquals(0, errorCount.get(), 
+        lastException.get() != null ? "Errors occurred: " + lastException.get().getMessage() : "Errors occurred");
+    assertEquals(THREAD_COUNT, successCount.get(), "Not all operations succeeded");
+
+    // Log performance metrics
+    double operationsPerSecond = (double) THREAD_COUNT / (durationMs / 1000.0);
+    log.info("Completed {} user creations in {} ms ({} ops/sec) using virtual threads",
+        THREAD_COUNT, durationMs, String.format("%.2f", operationsPerSecond));
+
+    // Clean up created users
+    for (String userId : userIds) {
+      try {
+        securitySystem.deleteUser(userId);
+      }
+      catch (Exception e) {
+        log.warn("Failed to delete test user {}: {}", userId, e.getMessage());
+      }
     }
+  }
+
+  /**
+   * Compares performance between virtual threads and platform threads for user operations.
+   * <p>
+   * This test executes the same user retrieval operations using both virtual threads and platform threads,
+   * then compares the performance to demonstrate the benefits of virtual threads for I/O-bound operations.
+   */
+  @Test
+  @DisplayName("Compare virtual threads vs platform threads performance")
+  public void testVirtualVsPlatformThreadsPerformance() throws Exception {
+    int operationCount = 1000;
     
-    public double getOperationsPerSecond() {
-      return operationsPerSecond;
-    }
+    // Test with virtual threads
+    long virtualThreadTime = measureExecutionTime(() -> {
+      try {
+        executeUserRetrievals(operationCount, true);
+      }
+      catch (Exception e) {
+        throw new RuntimeException(e);
+      }
+    });
     
-    @Override
-    public String toString() {
-      return String.format("%d operations in %.2f seconds (%.2f ops/sec, %d errors)",
-          totalOperations, durationSeconds, operationsPerSecond, errorCount);
+    // Test with platform threads
+    long platformThreadTime = measureExecutionTime(() -> {
+      try {
+        executeUserRetrievals(operationCount, false);
+      }
+      catch (Exception e) {
+        throw new RuntimeException(e);
+      }
+    });
+    
+    // Log and compare results
+    log.info("Virtual threads: {} operations in {} ms", operationCount, virtualThreadTime);
+    log.info("Platform threads: {} operations in {} ms", operationCount, platformThreadTime);
+    log.info("Performance ratio: {}", String.format("%.2f", (double) platformThreadTime / virtualThreadTime));
+    
+    // Virtual threads should generally be faster for I/O-bound operations
+    assertThat("Virtual threads should be at least as fast as platform threads",
+        platformThreadTime, greaterThan(virtualThreadTime * 0.8));
+  }
+
+  /**
+   * Helper method to create test users for the integration tests.
+   *
+   * @param count the number of users to create
+   */
+  private void createTestUsers(int count) throws Exception {
+    for (int i = 0; i < count; i++) {
+      User user = new User();
+      user.setUserId("test-user-" + i);
+      user.setFirstName("Test");
+      user.setLastName("User " + i);
+      user.setEmailAddress("test-user-" + i + "@example.com");
+      user.setStatus(UserStatus.active);
+      user.setSource("default");
+
+      // Add a role
+      Set<RoleIdentifier> roles = new HashSet<>();
+      roles.add(new RoleIdentifier("default", "test-role-" + i));
+      user.setRoles(roles);
+
+      // Create the user
+      userManager.addUser(user, "password-" + i);
     }
+  }
+
+  /**
+   * Helper method to execute user retrieval operations with either virtual or platform threads.
+   *
+   * @param count the number of operations to execute
+   * @param useVirtualThreads whether to use virtual threads or platform threads
+   */
+  private void executeUserRetrievals(int count, boolean useVirtualThreads) throws Exception {
+    // Create an appropriate executor
+    ExecutorService executor = null;
+    try {
+      if (useVirtualThreads) {
+        ThreadFactory factory = Thread.ofVirtual()
+            .name("virtual-thread-", 0)
+            .factory();
+        executor = Executors.newThreadPerTaskExecutor(factory);
+      }
+      else {
+        executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+      }
+
+      // Create a countdown latch to coordinate threads
+      CountDownLatch startLatch = new CountDownLatch(1);
+      CountDownLatch completionLatch = new CountDownLatch(count);
+      AtomicInteger successCount = new AtomicInteger(0);
+      AtomicInteger errorCount = new AtomicInteger(0);
+
+      // Submit tasks to the executor
+      for (int i = 0; i < count; i++) {
+        final int userId = i % CONCURRENT_USERS;
+        executor.submit(() -> {
+          try {
+            // Wait for the start signal
+            startLatch.await();
+
+            // Retrieve a user
+            User user = securitySystem.getUser("test-user-" + userId);
+            if (user != null && user.getUserId().equals("test-user-" + userId)) {
+              successCount.incrementAndGet();
+            }
+          }
+          catch (Exception e) {
+            errorCount.incrementAndGet();
+          }
+          finally {
+            completionLatch.countDown();
+          }
+        });
+      }
+
+      // Start the test
+      startLatch.countDown();
+
+      // Wait for all operations to complete
+      boolean completed = completionLatch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS);
+
+      // Verify results
+      assertTrue(completed, "Operations did not complete within timeout");
+      assertEquals(0, errorCount.get(), "Errors occurred");
+      assertEquals(count, successCount.get(), "Not all operations succeeded");
+    }
+    finally {
+      if (executor != null) {
+        executor.shutdown();
+        executor.awaitTermination(TIMEOUT_SECONDS, TimeUnit.SECONDS);
+      }
+    }
+  }
+
+  /**
+   * Helper method to measure the execution time of a task.
+   *
+   * @param task the task to execute
+   * @return the execution time in milliseconds
+   */
+  private long measureExecutionTime(Runnable task) {
+    long startTime = System.nanoTime();
+    task.run();
+    long endTime = System.nanoTime();
+    return TimeUnit.NANOSECONDS.toMillis(endTime - startTime);
   }
 }
